@@ -3,6 +3,7 @@
 
 == Feedback
 
+- Yi Wen, for lib/rufus-scheduler.rb
 - Adam Green and Rael Dornfest for the Taskr breaking issue feedback
 - Sean Liu, unschedule_every issue
 - Manfred Usselman (no cronjobs on sundays bug)
